--- a/1주차/MyApplication/app/src/main/res/layout/activity_main.xml
+++ b/1주차/MyApplication/app/src/main/res/layout/activity_main.xml
@@ -1,172 +1,181 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fillViewport="true">
+    android:padding="12dp"
+    android:background="#FFFFFF"
+    android:fontFamily="@font/gangwoneduhyeonokt"
+    tools:context=".MainActivity">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/main"
-        android:layout_width="match_parent"
+    <!-- 제목 -->
+
+    <TextView
+        android:id="@+id/tv_title"
+        android:layout_width="220dp"
         android:layout_height="wrap_content"
-        tools:context=".MainActivity">
+        android:layout_marginTop="36dp"
+        android:fontFamily="@font/gangwoneduhyeonokt"
+        android:text="오늘 하루는 어땠나요?"
+        android:textSize="26sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.562"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-        <TextView
-            android:id="@+id/tv_title"
-            android:layout_width="280dp"
-            android:layout_height="35dp"
-            android:layout_marginTop="124dp"
-            android:text="오늘 하루는 어땠나요?"
-            android:textSize="29sp"
-            android:textStyle="bold"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.496"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+    <TextView
+        android:id="@+id/tv_subtitle"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:fontFamily="@font/gangwoneduhyeonokt"
+        android:text="감정우표를 선택해주세요"
+        android:textSize="22sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.529"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tv_title" />
 
-        <TextView
-            android:id="@+id/tv_description"
-            android:layout_width="316dp"
-            android:layout_height="wrap_content"
-            android:text="선택한 감정우표를 기반으로 맞춤형 질문이 배달됩니다"
-            android:textSize="14sp"
-            android:layout_marginTop="20dp"
-            app:layout_constraintTop_toBottomOf="@id/tv_subtitle"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" />
+    <!-- 행복 -->
+    <TextView
+        android:id="@+id/tv_description"
+        android:layout_width="240dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:fontFamily="@font/gangwoneduhyeonokt"
+        android:text="선택한 감정우표를 기반으로 맞춤형 질문이 배달됩니다"
+        android:textSize="12sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.496"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tv_subtitle" />
 
-        <TextView
-            android:id="@+id/tv_subtitle"
-            android:layout_width="260dp"
-            android:layout_height="34dp"
-            android:layout_marginTop="8dp"
-            android:text="감정우표를 선택해주세요"
-            android:textSize="24sp"
-            android:textStyle="bold"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.503"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tv_title" />
+    <ImageView
+        android:id="@+id/iv_happy"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:layout_marginTop="20dp"
+        android:src="@drawable/happy"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tv_description" />
 
-        <TextView
-            android:id="@+id/tv_happymention"
-            android:layout_width="230dp"
-            android:layout_height="34dp"
-            android:layout_marginTop="32dp"
-            android:text="더없이 행복한 하루였어요"
-            android:textSize="21sp"
-            android:textStyle="bold"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.497"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/iv_happy" />
+    <TextView
+        android:id="@+id/tv_happymention"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="더없이 행복한 하루였어요"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        app:layout_constraintTop_toBottomOf="@id/iv_happy"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="6dp"/>
 
-        <ImageView
-            android:id="@+id/iv_good"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
-            android:src="@drawable/Good"
-            android:layout_marginTop="30dp"
-            app:layout_constraintTop_toBottomOf="@id/tv_happymention"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" />
+    <!-- 좋음 -->
 
-        <ImageView
-            android:id="@+id/iv_happy"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
-            android:layout_marginTop="64dp"
-            android:src="@drawable/happy"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.498"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tv_description" />
+    <ImageView
+        android:id="@+id/iv_good"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:layout_marginTop="20dp"
+        android:src="@drawable/good"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tv_happymention" />
 
-        <TextView
-            android:id="@+id/tv_goodmention"
-            android:layout_width="150dp"
-            android:layout_height="34dp"
-            android:text="들뜨고 흥분돼요"
-            android:textSize="21sp"
-            android:textStyle="bold"
-            android:layout_marginTop="12dp"
-            app:layout_constraintTop_toBottomOf="@id/iv_good"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" />
+    <TextView
+        android:id="@+id/tv_goodmention"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="들뜨고 흥분돼요"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        app:layout_constraintTop_toBottomOf="@id/iv_good"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="6dp"/>
 
-        <ImageView
-            android:id="@+id/iv_soso"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
-            android:src="@drawable/soso"
-            android:layout_marginTop="30dp"
-            app:layout_constraintTop_toBottomOf="@id/tv_goodmention"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" />
+    <!-- 평범 -->
 
-        <TextView
-            android:id="@+id/tv_sosomention"
-            android:layout_width="170dp"
-            android:layout_height="34dp"
-            android:text="평범한 하루였어요"
-            android:textSize="21sp"
-            android:textStyle="bold"
-            android:layout_marginTop="12dp"
-            app:layout_constraintTop_toBottomOf="@id/iv_soso"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" />
+    <ImageView
+        android:id="@+id/iv_soso"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:layout_marginTop="20dp"
+        android:src="@drawable/soso"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.501"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tv_goodmention" />
 
-        <ImageView
-            android:id="@+id/iv_anxious"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
-            android:src="@drawable/anxious"
-            android:layout_marginTop="30dp"
-            app:layout_constraintTop_toBottomOf="@id/tv_sosomention"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" />
+    <TextView
+        android:id="@+id/tv_sosomention"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="평범한 하루였어요"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        app:layout_constraintTop_toBottomOf="@id/iv_soso"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="6dp"/>
 
-        <TextView
-            android:id="@+id/tv_anxiousmention"
-            android:layout_width="230dp"
-            android:layout_height="34dp"
-            android:text="생각이 많아지고 불안해요"
-            android:textSize="21sp"
-            android:textStyle="bold"
-            android:layout_marginTop="12dp"
-            app:layout_constraintTop_toBottomOf="@id/iv_anxious"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" />
+    <!-- 불안 -->
 
-        <ImageView
-            android:id="@+id/iv_anger"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
-            android:src="@drawable/anger"
-            android:layout_marginTop="30dp"
-            app:layout_constraintTop_toBottomOf="@id/tv_anxiousmention"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" />
+    <ImageView
+        android:id="@+id/iv_anxious"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:layout_marginTop="12dp"
+        android:src="@drawable/anxious"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tv_sosomention" />
 
-        <TextView
-            android:id="@+id/tv_angermention"
-            android:layout_width="170dp"
-            android:layout_height="34dp"
-            android:text="부글부글 화가 나요"
-            android:textSize="21sp"
-            android:textStyle="bold"
-            android:layout_marginTop="12dp"
-            app:layout_constraintTop_toBottomOf="@id/iv_anger"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" />
+    <TextView
+        android:id="@+id/tv_anxiousmention"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="생각이 많아지고 불안해요"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        app:layout_constraintTop_toBottomOf="@id/iv_anxious"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="6dp"/>
 
-        <View
-            android:layout_width="0dp"
-            android:layout_height="150dp"
-            app:layout_constraintTop_toBottomOf="@id/tv_angermention"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" />
+    <!-- 화남 -->
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
-</ScrollView>
+    <ImageView
+        android:id="@+id/iv_anger"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:layout_marginTop="20dp"
+        android:src="@drawable/anger"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tv_anxiousmention" />
+
+    <TextView
+        android:id="@+id/tv_angermention"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="부글부글 화가 나요"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        app:layout_constraintTop_toBottomOf="@id/iv_anger"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="6dp"/>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
