--- a/2주차/MyApplication/app/src/main/res/layout/album_fragment.xml
+++ b/2주차/MyApplication/app/src/main/res/layout/album_fragment.xml
@@ -84,11 +84,10 @@
         android:layout_width="137dp"
         android:layout_height="163dp"
         android:src="@drawable/img_album_exp2"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.2" />
+        android:layout_marginTop="110dp" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
